# lametetris

./: .gitignore  LICENSE  LameTetris.cabal  LameTetris.hs  README  compile.sh  tetris.org  tiles.xcf
LameTetris/: Game.hs  GameNew.hs  GameOld.hs  Timer.hs  Types.hs  Utils.hs  Video.hs
