name: LameTetris
version: 0.0.0
synopsis: My attempt to recreate Tetris
category: Game
author: Patrick Seafield (ppseafield@gmail.com)
license: BSD3
license-file: LICENSE
build-type: Simple
cabal-version: >= 1.2
data-dir: data/

executable lametetris
  main-is: LameTetris.hs
  build-depends: SDL SDL-image SDL-mixer SDL-ttf transformers
