name: LameTetris
version: 0.1.0
synopsis: My attempt to recreate Tetris
category: Game
author: Patrick Seafield (ppseafield@gmail.com)
license: BSD3
license-file: LICENSE
build-type: Simple
cabal-version: >= 1.2
data-dir: data
build-depends: base >= 4,
               SDL,
               SDL-image,
               SDL-mixer,
               SDL-ttf,
               transformers,
							 repa >= 3

executable lametetris
  main-is: LameTetris.hs
  other-modules: LameTetris.Types,
                 LameTetris.Utils,
                 LameTetris.Timer
                 LameTetris.Video,
                 LameTetris.Game
  build-depends: base >= 4,
                 SDL,
                 SDL-image,
                 SDL-mixer,
                 SDL-ttf,
                 transformers,
                 repa >= 3
  ghc-options: -Odph
               -rtsopts
               -threaded
               -fno-liberate-case
               -funfolding-use-threshold1000
               -funfolding-keeness-factor1000
               -fllvm
               -optlo-O3
               -Wall
               -package base
  extra-libraries: SDL, SDL-image, SDL-mixer, SDL-ttf, transformers, repa
